Fix horizontal scroll block

--- a/styles/base.css
+++ b/styles/base.css
@@ -1,7 +1,7 @@
 html,
 body {
   width: 100vw;
-  overflow-x: hidden;
+  overflow-x: clip;
   overscroll-behavior: none;
 
   @media (--lg) {
